# ntp_client

./: CMakeLists.txt  LICENSE  Makefile  Makefile.mk  NTP.sln  NTP.vcxproj  NTP.vcxproj.filters  README.md  VxDType.h  VxNtpHelper.cpp  VxNtpHelper.h  main.cpp  ntp_client.cpp  ntp_client.h  ntp_timestamp.md  xtime.cpp  xtime.h  xtypes.h  使用NTP协议获取网络时间戳.md
doc/: ntp_timestamp.md
src/: ntp_client.c  ntp_client.h  xtime.c  xtime.h  xtypes.h
test/: ntp_test.c  xtime_test.c  zeller_test.c
